--- a/style.css
+++ b/style.css
@@ -1,18 +1,46 @@
-/* Style all font awesome icons */
-.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
+/* Style body & general content */
+body {
+    background-color: #001f3f;
+    font-family: 'Source Sans Pro', sans-serif;
+    color: #eeeeee;
+}
+
+a {
     text-decoration: none;
+    color: #eeeeee;
 }
 
-.fa-facebook {
-    background: none;
-    color: #3b5998;
+/* Style Header & Navigation */
+.container {
+    border-bottom: 1px solid #eeeeee;
+    display: flex;
+    justify-content: space-between;
+    padding: 20px 40px 20px 40px;
+    }
+
+.nav-links {
+    list-style: none;
+    margin: 0px;
 }
 
-.fa-twitter {
-    background: none;
-    color: #1da1f2;
+li {
+    display: inline-block;
+    margin-left: 60px;
+    vertical-align: center;
+}
+
+
+/* Logo Styles */
+.logo {
+    font-family: 'Pacifico', cursive;
+    font-size: 35px;
+}
+
+/* Style footer */
+.footer {
+    display: flex;
+    justify-content: space-between;
+}
+.social {
+    color: #eeeeee;
 }
