--- a/style.css
+++ b/style.css
@@ -161,34 +161,23 @@ hr {
     padding: 5%;
 }
 
-/* Style Icon Tabs */
 .icon {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
-.search-icon-tab {
-    border: 1px solid black;
+
+.i-tab {
+    margin: 0px 30px;
+    width: 231px;
+    height: 243.84px;
+    border: 1px solid #001f3f;
     border-radius: 5px;
-    width: 15%;
-    padding: 10px;
+    padding: 10px
 }
-.create-icon-tab {
-    border: 1px solid black;
-    border-radius: 5px;
-    width: 15%;
-    padding: 10px;
-}
-.payment-icon-tab {
-    border: 1px solid black;
-    border-radius: 5px;
-    width: 15%;
-    padding: 10px;
-}
-.build-icon-tab {
-    border: 1px solid black;
-    border-radius: 5px;
-    width: 15%;
-    padding: 10px;
+
+.svg-icon {
+    width: 70px;
+    height: auto;
 }
 
 /* Style Section "Projects" */
@@ -200,7 +189,7 @@ hr {
 
 .social-logo-box {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     padding: 40px 40px 0px 40px;
 }
 
@@ -211,6 +200,7 @@ hr {
     border-radius: 5px;
     padding: 20px;
     box-sizing: border-box;
+    margin: 0px 30px;
 }
 
 .social-logo-image {
