--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Source Sans Pro', 'sans-serif';
 }
 
 :root {
@@ -22,34 +23,38 @@ p span {
 }
 
 .landing-li {
-    float: left;
-    padding-right: 20px;
+    color: white;
 }
 
 .landing-li a {
     text-decoration: none;
-}
-
-.landing-li a {
+    font-size: 20px;
     color: white;
+    padding: 30px 20px;
 }
 
 .landing-ul {
     list-style-type: none;
+    display: flex;
+    align-items: baseline;
 }
 
-ul>li:nth-child(2),
-li:nth-child(3),
-li:nth-child(4),
-li:nth-child(5),
-li:nth-child(6) {
-    float: right;
-}
 
 .landing-page {
     background: var(--main-landing-color)
 }
 
 .landing-nav {
-    padding: 1rem;
+    color: white;
+    padding: 1.3rem;
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+}
+
+
+.signup {
+    background: rgba(104, 226, 104, 0.932);
+    border-radius: 5px;
+    padding: 10px 15px;
 }
