--- a/search.css
+++ b/search.css
@@ -115,3 +115,69 @@ body {
     font-weight: 200;
     color: rgba(255, 255, 255, 0.603);
 }
+
+.search-logo {
+    font-size: 35px;
+    font-family: 'Pacifico', cursive;
+}
+
+/* DEVELOPER PAGE */
+
+.developers-section {
+    margin-top: 12vh;
+    background: #E5E5E5;
+
+}
+
+.developers {
+    border: 1px 1px solid rgba(255, 255, 255, 0.836);
+    padding: 1rem 3rem;
+    background: #FFFFFF;
+    box-shadow: 0px 0.5px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 5px;
+}
+
+.developers-filter {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 2rem;
+}
+
+.input-icon {
+    margin-left: 1rem;
+}
+
+select.input-icon {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -o-appearance: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    color: black;
+    background: white;
+    font-size: 15px;
+}
+
+.filter-1 {
+    display: flex;
+    justify-content: baseline;
+}
+
+.filter-2 {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+
+select+i.fa {
+    float: right;
+    margin-top: -30px;
+    margin-right: 5px;
+    /* this is so when you click on the chevron, your click actually goes on the dropdown menu */
+    pointer-events: none;
+    /* everything after this is just to cover up the original arrow */
+    /* (for browsers that don't support the syntax used above) */
+    background-color: #fff;
+    padding-right: 5px;
+}
