I made corrections to navbar links and made site logo uniform for all pages

--- a/style.css
+++ b/style.css
@@ -57,6 +57,13 @@ body {
   justify-content: space-between;
 }
 
+.increasefont {
+  font-size: 35px;
+  font-family: 'Pacifico', cursive;
+  color: white;
+  text-decoration: none;
+}
+
 
 .signup {
   background: rgba(104, 226, 104, 0.932);
