--- a/search.css
+++ b/search.css
@@ -10,6 +10,16 @@ body {
     font-family: 'Lato', sans-serif;
 }
 
+.link {
+    color: white;
+    text-decoration: none;
+}
+
+.increasefont {
+    font-size: 35px;
+    font-family: 'Pacifico', cursive;
+}
+
 :root {
     --main-color: #001F3F;
     --primary-color: #13C969;
@@ -106,6 +116,7 @@ body {
     padding: 17px;
     border-radius: 5px;
     outline: none;
+    color: white;
     font-size: 20px;
     background: var(--main-color);
     border: 1px 1px solid white;
@@ -116,8 +127,3 @@ body {
     color: rgba(255, 255, 255, 0.603);
 }
 
-.search-logo a {
-  color: #13C969;
-  font-size: 2em;
-  text-decoration: none;
-}
