--- a/search.css
+++ b/search.css
@@ -3,7 +3,6 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Source Sans Pro', 'sans-serif';
-
 }
 
 body {
@@ -109,6 +108,7 @@ body {
     font-size: 20px;
     background: var(--main-color);
     border: 1px 1px solid white;
+    color: white;
 }
 
 .header-inp::-webkit-input-placeholder {
@@ -125,13 +125,12 @@ body {
 
 .developers-section {
     margin-top: 12vh;
-    background: #E5E5E5;
-
+    background: white;
+    padding: 2rem 4rem;
 }
 
 .developers {
-    border: 1px 1px solid rgba(255, 255, 255, 0.836);
-    padding: 1rem 3rem;
+    padding-bottom: 1rem;
     background: #FFFFFF;
     box-shadow: 0px 0.5px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
@@ -139,45 +138,151 @@ body {
 
 .developers-filter {
     display: flex;
+    padding: 1.5rem;
     justify-content: space-between;
-    padding: 0 2rem;
+    background: rgba(240, 239, 239, 0.541);
 }
 
-.input-icon {
-    margin-left: 1rem;
-}
-
-select.input-icon {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -o-appearance: none;
-    padding: 10px 15px;
-    border-radius: 5px;
-    color: black;
-    background: white;
-    font-size: 15px;
-}
-
-.filter-1 {
+.filter-left,
+.filter-right {
     display: flex;
-    justify-content: baseline;
 }
 
+
+
+.filter-1_header,
+.filter-2_header {
+    align-self: center;
+    justify-self: center;
+    font-size: 10px;
+    margin-right: 1rem;
+}
+
+.filter-1,
 .filter-2 {
     display: flex;
     justify-content: center;
     align-content: center;
+    position: relative;
+    margin: 0 1rem;
 }
 
 
-select+i.fa {
-    float: right;
-    margin-top: -30px;
-    margin-right: 5px;
-    /* this is so when you click on the chevron, your click actually goes on the dropdown menu */
+.filter-1:after,
+.filter-2:after {
+    content: '\f078';
+    font: normal normal normal 17px/1 FontAwesome;
+    right: 10px;
+    top: 6px;
+    height: 34px;
+    padding: 15px 0px 0px 8px;
+    position: absolute;
     pointer-events: none;
-    /* everything after this is just to cover up the original arrow */
-    /* (for browsers that don't support the syntax used above) */
-    background-color: #fff;
-    padding-right: 5px;
+    color: rgb(48, 47, 53);
+}
+
+
+
+.filter-1 select,
+.filter-2 select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    outline: none;
+    display: flex;
+    width: 150px;
+    max-width: 320px;
+    border-radius: 5px;
+    height: 50px;
+    margin: 5px 0;
+    padding: 0px 35px 0 24px;
+    font-size: 16px;
+    line-height: 1.75;
+    color: #333;
+    background-color: #ffffff;
+    background-image: none;
+    -ms-word-break: normal;
+    word-break: normal;
+}
+
+.developer-details{
+    position: relative;
+    margin: 3rem;
+    display: flex;
+}
+.developer-detail{
+    display: flex;
+    flex-direction: column;
+}
+
+.developer-name{
+    font-size: 34px;
+    line-height: 42px;
+    letter-spacing: 0.002em;
+    margin-bottom: .5rem;
+}
+.developer-list{
+    display: flex;
+    list-style: none;
+    margin-bottom: 1rem;
+}
+
+.developer-list_item{
+    padding-right: 10px;
+    font-weight: bold;
+    font-size: 15px;
+}
+.developer-img{
+    margin: 0 1rem;
+}
+
+.developer-img_main {
+    width: 370px;
+    height: 270px;
+}
+.developer-skills{
+    margin-top: auto;
+}
+
+.developer-text{
+    font-size: 13px;
+    margin-bottom: auto;
+}
+.developer-skills_list{
+    display: flex;
+    list-style: none;
+    flex-wrap: wrap;
+    width: 703px;
+}
+.yellow-item{
+    color: yellow;
+}
+.number{
+    color: rgb(104, 100, 100);
+    font-weight: 200;
+}
+.developer-skills_item{
+    padding: 5px 15px;
+    border-radius: 5px;
+    outline: none;
+    font-size: 13px;
+    font-weight: 400;
+    background: rgb(235, 232, 232);
+    border: 1px solid rgba(66, 63, 63, 0.37);
+    margin: 10px 10px 10px 0;
+}
+
+.view-profile{
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+.view-btn{
+    background: var(--primary-color);
+    padding: 15px 25px;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    font-size: 20px;
+    color: white;
 }
