--- a/search.css
+++ b/search.css
@@ -80,8 +80,8 @@ body {
 }
 
 .search-header_primary {
+    font-size: 35px;
     font-weight: bold;
-    font-size: 40px;
 }
 
 .search-header_secondary {
@@ -313,4 +313,25 @@ body {
 }
 
 /* SIGNUP */
-
+.developers-signup{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 2rem 0;
+}
+.signup-btn{
+    background: var(--primary-color);
+    border-radius: 5px;
+    padding: 15px 35px;
+    font-size: 20px;
+    color: white;
+    margin-top: 1rem;
+    outline: none;
+    border: none;
+}
+.signup-header{
+    color: #001F3F;
+    font-size: 35px;
+    font-weight: 600;
+}
