--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
   text-decoration: none;
   font-size: 20px;
   color: white;
-  padding: 30px 20px;
+  padding: 30px 20px;git s
 }
 
 .landing-ul {
