updated the search css

--- a/search.css
+++ b/search.css
@@ -57,7 +57,7 @@ body {
 
 .search-page {
     background: var(--main-color);
-    //min-width: 1300px;
+    min-width: 1300px;
 }
 
 .search-nav {
@@ -377,7 +377,7 @@ body {
 
 /* FOOTER */
 .bottom-section {
-   // min-width: 1300px;
+    min-width: 1300px;
 }
 
 .footer {
