--- a/style.css
+++ b/style.css
@@ -380,7 +380,7 @@ hr {
 
     .social-logo-box{
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
         grid-gap: 2rem;
         /* margin: auto; */
     }
