--- a/style.css
+++ b/style.css
@@ -41,12 +41,12 @@ button {
 }
 
 .btn-large.find {
-    width: 80%;
+    width: 100%;
     background-color: green;
 }
 
 .btn-large.register {
-    width: 80%;
+    width: 100%;
     background-color: red;
 }
 
@@ -62,44 +62,136 @@ button {
 }
 
 /* Style Header & Navigation */
-.container {
-    border-bottom: 1px solid #eeeeee;
-    display: flex;
-    justify-content: space-between;
-    padding: 0px 40px;
-    margin: 0px auto;
-    overflow: hidden;
-    position: relative;
-    }
 
-.container #myLinks {
-    display: none;
-   } 
+/* header */
 
-.container a.icon {
-    background: black;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-    }
-
-.container a:hover {
-    background-color: #ddd;
-    color: black;
-   } 
-
-
-.nav-links {
-    list-style: none;
-    margin-top: 20px;
-    font-family: 'Roboto', sans-serif;
+.header {
+  background-color: #001f3f;
+  position: relative;
+  width: 100%;
+  z-index: 3;
+  border-bottom: 1px solid #eee;
 }
 
-li {
-    display: inline-block;
-    margin-left: 60px;
-    vertical-align: center;
+
+.header ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  background-color: #001f3f;
+}
+
+.header li a {
+  display: block;
+  padding: 20px 20px;
+  text-decoration: none;
+}
+
+.header li a:hover,
+.header .menu-btn:hover {
+  color: green;
+}
+
+.header .logo {
+  display: block;
+  float: left;
+  font-size: 2em;
+  padding: 10px 20px;
+  text-decoration: none;
+}
+
+/* menu */
+
+.header .menu {
+  clear: both;
+  max-height: 0;
+  transition: max-height .2s ease-out;
+}
+
+/* menu icon */
+
+.header .menu-icon {
+  cursor: pointer;
+  display: inline-block;
+  float: right;
+  padding: 30px 20px;
+  position: relative;
+  user-select: none;
+}
+
+.header .menu-icon .navicon {
+  background: #eee;
+  display: block;
+  height: 2px;
+  position: relative;
+  transition: background .2s ease-out;
+  width: 18px;
+}
+
+.header .menu-icon .navicon:before,
+.header .menu-icon .navicon:after {
+  background: #eee;
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all .2s ease-out;
+  width: 100%;
+}
+
+.header .menu-icon .navicon:before {
+  top: 5px;
+}
+
+.header .menu-icon .navicon:after {
+  top: -5px;
+}
+
+/* menu btn */
+
+.header .menu-btn {
+  display: none;
+}
+
+.header .menu-btn:checked ~ .menu {
+  max-height: 240px;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:before {
+  transform: rotate(-45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:after {
+  transform: rotate(45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  top: 0;
+}
+
+/* 48em = 768px */
+
+@media (min-width: 48em) {
+  .header li {
+    float: left;
+  }
+  .header li a {
+    padding: 20px;
+  }
+  .header .menu {
+    clear: none;
+    float: right;
+    max-height: none;
+  }
+  .header .menu-icon {
+    display: none;
+  }
 }
 
 
@@ -107,7 +199,7 @@ li {
 .logo {
     font-family: 'Pacifico', cursive;
     font-size: 35px;
-    margin: 16px 0px 16px;
+    margin: 0;
 }
 
 /* Style footer */
@@ -125,7 +217,7 @@ li {
     width: 100%;
     display: flex;
     justify-content: space-around;
-    text-align: center;
+    text-align: left;
 }
 
 .search, .vector-file {
@@ -142,7 +234,7 @@ li {
 }
 
 .search-bar {
-    width: 80%;
+    width: 100%;
     margin-bottom: 1em;
     background-color: transparent;
     border: 2px solid #eeeeee;
@@ -150,29 +242,28 @@ li {
     border-radius: 5px;
 }
 
+
 h1 {
     font-size: 42.2px;
     text-align: left;
-    margin-left: 1em;
+    margin-left: 0;
 }
 
 .hero-offer {
     font-family: 'Roboto', sans-serif;
-    font-size: 1.5em;
-    margin: 1em;
+    font-size: 1em;
+    margin-bottom: 1em;
+    text-align: left;
 }
 .horizontal-rule {
     display: flex;
     justify-content: space-between;
-    width: 70%;
-}
-
-hr {
-    width: 30%;
+    width: 100%;
 }
 
 .or {
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 0px;
     padding: 0px 11px 0px 11px;
 }
 /* Start Section "How it works..." */
@@ -196,6 +287,7 @@ hr {
     margin: 0.5em;
     border: 1px solid #001f3f;
     border-radius: 5px;
+    padding: 20px;
 }
 
 .svg-icon {
@@ -203,11 +295,16 @@ hr {
     height: auto;
 }
 
+/* Style Section Clients */
+.clients {
+  padding: 20px;
+}
+
 /* Style Section "Projects" */
 .projects {
     background-color: white;
     color: #001f3f;
-    /* padding: 40px; */
+    padding: 20px;
 }
 
 .social-logo-box {
@@ -240,12 +337,24 @@ hr {
     border-radius: 5px;
 }
 
+.what-are-you-waiting-for {
+    padding: 20px;
+}
   /* Added */
 
   @media screen and (max-width: 750px) {
     .how {
       display: flex;
       flex-wrap: wrap;
+    }
+    
+    .client-img {
+      width: 150px;
+      height: auto;
+    }
+    
+    button {
+      font-size: 15px;
     }
 
     .hero {
@@ -263,6 +372,7 @@ hr {
     .big-image {
       max-width: 100%;
     }
+    
   }
 
   @media screen and (max-width: 450px) {
@@ -293,4 +403,3 @@ hr {
     font-size: 3em;
     margin-top: 0.5em;
   }
-
